2007-05-07  Thomas Wood  <thos@gnome.org>

	* appearance-main.c: (main):
	* appearance.glade:

	- Change GtkWindow to GtkDialog
	- Add Help and Close buttons
	- Set theme list scrolling policy to automatic

2007-05-07  Thomas Wood  <thos@gnome.org>

	* appearance.glade: Add a "Style" tab for the theme detail options

2007-05-07  Thomas Wood  <thos@gnome.org>

	* Makefile.am: Add FONT_CAPPLET_CFLAGS to INCLUDES

2007-05-06  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main): set application icon

2007-05-06  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* gnome-appearance-properties.desktop.in.in: add a desktop file

2007-05-06  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade: make the Add Wallpaper and Remove buttons in the
	Desktop tab stock buttons.

2007-05-04  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (desktop_init):
	* appearance.glade: more HIG and consistency fixing

2007-05-04  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (desktop_init):
	* appearance.glade: fix string capitalization according to HIG

2007-05-04  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade: Change tab order; Desktop now comes before Fonts.

2007-05-04  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* appearance-font.c:
	* appearance-font.h:
	* appearance-main.c: (init_appearance_data), (main):
	* appearance.glade:
	* appearance.h:
	* subpixel-bgr.png:
	* subpixel-rgb.png:
	* subpixel-vbgr.png:
	* subpixel-vrgb.png:

	add implementation for fonts tab

2007-05-04  Thomas Wood  <thos@gnome.org>

	* appearance-desktop.c: (wp_add_images), (wp_dragged_image),
	(desktop_init):
	* appearance-main.c: (main):
	* appearance-themes.c: (themes_init):
	* appearance-ui.c: (set_toolbar_style), (set_have_icons),
	(ui_init):
	* appearance.h:
	Remove WID() macro, which has an incompatible definition in capplet-utils.h

2007-05-04  Thomas Wood  <thos@gnome.org>
